# kiro

./: Cargo.toml  README.md  TESTING.md  tauri.conf.json
icons/: icon.icns
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs
src/store/: mod.rs  note.rs
tests/: test_runner.html
ui/: index.html
ui/js/: api.js  app.js  editor.js  import.js  keyboard.js  search.js  settings.js  utils.js
ui/styles/: components.css  main.css  theme.css
