[package]
name = "kiro-gui"
version = "0.1.0"
edition = "2021"
description = "A modern GUI notes application"
authors = ["dlb"]

[lib]
name = "kiro_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dirs = "5.0"
sha2 = "0.10"
regex = "1.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
